Fix typo in class name
Change "detaiInfoTable" to "detailInfoTable".

Change-Id: Ib738ce1aab3f6d6b96ba1bf470a7168dfac7e591
Closes-Bug: #1265008

--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_device.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_device.html
@@ -5,7 +5,7 @@
 
 {% block template %}
 {% jstemplate %}
-<table class="detaiInfoTable">
+<table class="detailInfoTable">
   <caption>[[name]]</caption>
   <tbody>
     <tr>
