--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2135,7 +2135,7 @@ label.log-length {
       }
     }
   }
-  table.detaiInfoTable {
+  table.detailInfoTable {
     margin-bottom: 5px;
     caption {
       text-align: left;
