--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_port.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_port.html
@@ -5,7 +5,7 @@
 
 {% block template %}
 {% jstemplate %}
-<table class="detaiInfoTable">
+<table class="detailInfoTable">
   <caption>Interfaces</caption>
   <tbody>
     [[#port]]
