Consolidate user visible spelling of keypair vs Key Pair
"Key Pair" wins the Google popularity contest (880k vs 300k),
and "Keypair" is not listed in Webster. Ispell autocorrects
it to "Key Pair" (or Key-Pair)

Change-Id: I4710b194dfd3c53f21fc99ce53db94cc5af0c158
Related-Bug: #1210533

--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/keypairs/_import.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/keypairs/_import.html
@@ -5,7 +5,7 @@
 {% block form_id %}import_keypair_form{% endblock %}
 {% block form_action %}{% url 'horizon:project:access_and_security:keypairs:import' %}{% endblock %}
 
-{% block modal-header %}{% trans "Import Keypair" %}{% endblock %}
+{% block modal-header %}{% trans "Import Key Pair" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
@@ -15,9 +15,9 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "Keypairs are how you login to your instance after it is launched." %}</p>
-    <p>{% trans "Choose a keypair name you will recognise and paste your SSH public key into the space provided." %}</p>
-    <p>{% trans "SSH keypairs can be generated with the ssh-keygen command:" %}</p>
+    <p>{% trans "Key Pairs are how you login to your instance after it is launched." %}</p>
+    <p>{% trans "Choose a key pair name you will recognise and paste your SSH public key into the space provided." %}</p>
+    <p>{% trans "SSH key pairs can be generated with the ssh-keygen command:" %}</p>
     <p><pre>ssh-keygen -t rsa -f cloud.key</pre></p>
     <p>{% trans "This generates a pair of keys: a key you keep private (cloud.key) and a public key (cloud.key.pub). Paste the contents of the public key file here." %}</p>
     <p>{% trans "After launching an instance, you login using the private key (the username might be different depending on the image you launched):" %}</p>
@@ -28,6 +28,6 @@
 {% endblock %}
 
 {% block modal-footer %}
-  <input class="btn btn-primary pull-right" type="submit" value="{% trans "Import Keypair" %}" />
+  <input class="btn btn-primary pull-right" type="submit" value="{% trans "Import Key Pair" %}" />
   <a href="{% url 'horizon:project:access_and_security:index' %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
