--- a/horizon/templates/horizon/common/_limit_summary.html
+++ b/horizon/templates/horizon/common/_limit_summary.html
@@ -39,14 +39,14 @@
   {% if usage.limits.totalVolumesUsed >= 0 %}
     <div class="d3_quota_bar">
       <div class="d3_pie_chart" data-used="{% widthratio usage.limits.totalVolumesUsed usage.limits.maxTotalVolumes 100 %}"></div>
-      <strong>{% trans "Available Volumes" %} <br />
+      <strong>{% trans "Volumes" %} <br />
         {% blocktrans with used=usage.limits.totalVolumesUsed|intcomma available=usage.limits.maxTotalVolumes|intcomma %}Used <span> {{ used }} </span> of <span> {{ available }} </span>{% endblocktrans %}
       </strong>
     </div>
 
     <div class="d3_quota_bar">
       <div class="d3_pie_chart" data-used="{% widthratio usage.limits.totalGigabytesUsed usage.limits.maxTotalVolumeGigabytes 100 %}"></div>
-      <strong>{% trans "Available Volume Storage" %} <br />
+      <strong>{% trans "Volume Storage" %} <br />
         {% blocktrans with used=usage.limits.totalGigabytesUsed|diskgbformat available=usage.limits.maxTotalVolumeGigabytes|diskgbformat %}Used <span> {{ used }} </span> of <span> {{ available  }} </span>{% endblocktrans %}
       </strong>
     </div>
