--- a/horizon/templates/horizon/qunit.html
+++ b/horizon/templates/horizon/qunit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Horizon QUnit Test Suite</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}horizon/lib/qunit/qunit.css" type="text/css" media="screen">
-    <script type="text/javascript" src="{{ STATIC_URL }}horizon/lib/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}horizon/lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}horizon/lib/qunit/qunit.js"></script>
     {% include "horizon/_conf.html" %}
 
