Make table_actions style work with buttons
Change-Id: I4470d50567e4fa92370ee8573047f5d717b74962
Closes-Bug: #1269653

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -592,15 +592,15 @@ table form {
 
 .table_actions {
 
-    a.btn-create, a.btn-launch {
+    a.btn-create, button.btn-create, a.btn-launch {
       .btn-icon(-403px, -92px);
     }
 
-    a.btn-download {
+    a.btn-download, button.btn-download {
       .btn-icon(-91px, -19px);
     }
 
-    a.btn-upload {
+    a.btn-upload, button.btn-upload {
       .btn-icon(-283px, -92px);
     }
 
