Translating entity types in network topology
Change-Id: I4f4e2898f18e994e7fdd29fdb1a478d461313e83
Partial-bug: #1226159

--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_device.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_device.html
@@ -9,11 +9,11 @@
   <caption>[[name]]</caption>
   <tbody>
     <tr>
-      <th class="device">ID</th>
+      <th class="device">[[id_label]]</th>
       <td>[[id]]</td>
     </tr>
     <tr>
-      <th class="device">STATUS</th>
+      <th class="device">[[status_label]]</th>
       <td>
         <span class="[[status_class]]">[[status]]</span>
       </td>
