--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_port.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_port.html
@@ -6,7 +6,7 @@
 {% block template %}
 {% jstemplate %}
 <table class="detailInfoTable">
-  <caption>Interfaces</caption>
+  <caption>[[interfaces_label]]</caption>
   <tbody>
     [[#port]]
     <tr>
@@ -22,7 +22,7 @@
       </td>
       <td class="delete">
         [[#is_interface]]
-        <button class="delete-port btn btn-danger btn-mini" data-router-id="[[router_id]]"  data-port-id="[[id]]">Interface</button>
+        <button class="delete-port btn btn-danger btn-mini" data-router-id="[[router_id]]"  data-port-id="[[id]]">[[interface_label]]</button>
         [[/is_interface]]
       </td>
     </tr>
