--- a/horizon/templates/horizon/common/_workflow.html
+++ b/horizon/templates/horizon/common/_workflow.html
@@ -11,7 +11,7 @@
     </div>
     <div class="modal-body clearfix">
     {% block modal-body %}
-      <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs{% if workflow.wizard %} wizard-tabs{% endif %}">
         {% for step in workflow.steps %}
         <li class="{% if entry_point == step.slug %}active{% endif %}{% if step.has_errors %} error{% endif %}{% if step.has_required_fields %} required{% endif %}">
           <a href="#{{ step.get_id }}" data-toggle="tab" data-target="#{{ step.get_id }}">{{ step }}</a>
@@ -52,4 +52,11 @@
 </div>
 {% endwith %}
 {% block modal-js %}
+  {% if workflow.wizard %}
+  <script type="text/javascript">
+    (window.$ || window.addHorizonLoadEvent)(function () {
+      horizon.modals.init_wizard();
+    });
+  </script>
+  {% endif %}
 {% endblock %}
