--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1,5 +1,6 @@
 @import "../../bootstrap/less/bootstrap.less";
 @import "../../bootstrap/less/datepicker.less";
+@import "accordion_nav.less";
 
 /* new clearfix */
 .clearfix:after {
@@ -37,20 +38,11 @@ dt {
   font-weight: bold;
 }
 
-#main_content {
-  padding-left: 250px;
-  padding-right: 25px;
-}
-
 .topbar {
   background: #f2f2f2;
-  border-bottom: 1px solid #e5e5e5;
-  padding: 10px 25px;
-  margin-top: 0;
-  margin-left: -25px;
-  margin-bottom: 20px;
-  margin-right: -25px;
-  min-width: 700px;
+  #gradient > .vertical(#FFFFFF, #d8d8d8);
+  border-bottom: 1px solid #cccccc;
+  padding: 10px 0px 15px 0px;
 }
 
 .topbar .switcher_bar {
@@ -59,17 +51,18 @@ dt {
   width: 160px;
   background-position: 140px center;
   margin-bottom: 0;
-  font-size: 11px;
-  margin-left: 20px;
+  margin-right: 10px;
   padding: 0;
   background-image: url(/static/dashboard/img/drop_arrow.png);
-  border: 1px solid #c0d9e4;
-  background-color: #e9f5fa;
+  background-color: #eee;
   background-repeat: no-repeat;
+  border: 1px solid #ccc;
+  border-bottom-color: #bbb;
+  .border-radius(4px);
+  .box-shadow(e('inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)'));
 }
 
 .topbar .switcher_bar a {
-  padding: 2px 10px 1px;
   margin-left: 0;
   display: block;
 }
@@ -78,21 +71,60 @@ dt {
   width: 130px;
 }
 
+.topbar .switcher_bar h3 {
+  padding: 2px 10px 1px;
+  font-size: 13px !important;
+  line-height: 20px;
+  color: #6e6e6e;
+  text-decoration: none;
+}
+
+.topbar .switcher_bar div {
+  padding: 2px 10px 1px;
+  font-size: 11px !important;
+  line-height: 20px;
+  color: #6e6e6e;
+  text-decoration: none;
+  overflow: hidden;
+  padding-right: 32px;
+  text-overflow: ellipsis;
+}
+
+.topbar .context-box {
+  display: inline;
+}
+
+#profile_editor_switcher {
+  width:auto;
+  max-width: 200px;
+  vertical-align: top;
+  white-space: nowrap;
+  background-image: url(/static/dashboard/img/profile_drop.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
 #user_info {
-    color: #888;
-    margin: auto 0;
+  color: #888;
+  margin: auto 10px;
+  padding-bottom: 15px;
+  padding-right: 25px;
 }
 
 #user_info > a {
-    margin-left: 25px;
-    font-size: 11px !important;
+  color: #6e6e6e;
+  margin-left: 15px;
+  line-height: 20px;
+  font-size: 13px !important;
 }
 
 .page-header {
-  margin: 0;
-  padding: 0;
-  border: 0;
+  margin: 0 0 5px 0;
+  padding: 0 0 5px 0;
+  border-bottom: 2px solid #e5e5e5;
   font-family: anivers;
+  height: auto;
+  width: 100%;
 }
 
 h2 {
@@ -163,10 +195,12 @@ body {
 }
 
 .sidebar {
-    background: #edf9ff;
+    background-color: #f9f9f9;
     border-right: 5px solid #e5e5e5;
     border-bottom: 5px solid #e5e5e5;
+    .border-radius(0 0 5px 0);
     float: left;
+    min-width: 231px;
 }
 
 .sidebar h4 {
@@ -185,20 +219,16 @@ body {
 h1.brand {
     width: 100%;
     margin: 0;
-    background-color: #f5f5f5;
-    padding-bottom: 40px;
 }
 
 h1.brand a {
     background: url(/static/dashboard/img/logo.png) top left no-repeat;
     display: block;
     float: left;
-    width: 116px;
-    height: 123px;
+    width: 216px;
+    height: 35px;
     text-indent: -9999px;
-    margin-left: 56px;
-    margin-top: 15px;
-    margin-bottom: 25px;
+    margin-left: 16px;
 }
 
 
@@ -216,6 +246,7 @@ a.current_item:hover {
 
 a.current_item:hover h3, a.current_item:hover h4 {
     color: #39738c;
+    .border-radius(4px)
 }
 
 .sidebar .switcher_bar {
@@ -335,10 +366,10 @@ a.current_item:hover h3, a.current_item:hover h4 {
   padding: 0 0 0 1px;
 }
 
-
 .table-bordered {
   border: none;
 }
+
 .table_header {
   min-height: 35px;
   padding: 5px 0;
@@ -1310,6 +1341,11 @@ tr.terminated {
   border-left: 0 none;
   border-right: 0 none;
   border-bottom: 0 none;
+}
+
+#content_body {
+  padding-left: 255px;
+  padding-right: 25px;
 }
 
 .tab_wrapper {
