--- a/horizon/templates/base.html
+++ b/horizon/templates/base.html
@@ -13,7 +13,7 @@
     {% include "horizon/client_side/_script_loader.html" %}
     {% include "horizon/_custom_head_js.html" %}
   </head>
-  <body id="{% block body_id %}{% endblock %}" ng-app='horizonApp'>
+  <body id="{% block body_id %}{% endblock %}" ng-app='hz'>
     {% block content %}
       <div id="container">
         {% block sidebar %}
