--- a/horizon/templates/horizon/_conf.html
+++ b/horizon/templates/horizon/_conf.html
@@ -1,21 +1,35 @@
 {% load compress %}
 
 {% compress js %}
+
+<script src='{{ STATIC_URL }}horizon/lib/jquery/jquery.min.js' type='text/javascript' charset="utf-8"></script>
+<script src="{{ STATIC_URL }}horizon/lib/angular.js" type="text/javascript" charset="utf-8"></script>
+
+
 <script src='{{ STATIC_URL }}horizon/js/horizon.js' type='text/javascript' charset='utf-8'></script>
-<script src='{{ STATIC_URL }}horizon/js/horizon.conf.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/angular/horizon.js' type='text/javascript' charset='utf-8'></script>
 <script type='text/javascript' charset='utf-8'>
 /* Storage for backend configuration variables which the frontend
  * should be aware of.
  */
-horizon.conf.debug = {{ debug|yesno:"true,false" }};
-horizon.conf.static_url = "{{ STATIC_URL }}";
-horizon.conf.ajax = {
-  queue_limit: {{ HORIZON_CONFIG.ajax_queue_limit|default:"null" }}
-};
-horizon.conf.auto_fade_alerts = {
-  delay: {{ HORIZON_CONFIG.auto_fade_alerts.delay|default:"3000" }},
-  fade_duration: {{ HORIZON_CONFIG.auto_fade_alerts.fade_duration|default:"1500" }},
-  types: {{ HORIZON_CONFIG.auto_fade_alerts.types|default:"[]"|safe }}
-};
+
+horizonApp
+  .config(['hzConfig', function (hzConfig) {
+    hzConfig.debug = {{ debug|yesno:"true,false" }};
+    hzConfig.static_url = "{{ STATIC_URL }}";
+    hzConfig.ajax = {
+      queue_limit: {{ HORIZON_CONFIG.ajax_queue_limit|default:"null" }}
+    };
+    hzConfig.auto_fade_alerts = {
+      delay: {{ HORIZON_CONFIG.auto_fade_alerts.delay|default:"3000" }},
+      fade_duration: {{ HORIZON_CONFIG.auto_fade_alerts.fade_duration|default:"1500" }},
+      types: {{ HORIZON_CONFIG.auto_fade_alerts.types|default:"[]"|safe }}
+    };
+}])
+  .run(['hzConfig', function (hzConfig) {
+    //expose the configuration for horizon legacy variable
+    horizon.conf = hzConfig;
+  }]);
+
 </script>
 {% endcompress %}
