--- a/horizon/templates/horizon/qunit.html
+++ b/horizon/templates/horizon/qunit.html
@@ -17,7 +17,7 @@
 
     {% include "horizon/_scripts.html" %}
   </head>
-  <body>
+  <body ng-app="hz">
     <h1 id="qunit-header">Horizon JavaScript Tests</h1>
     <h2 id="qunit-banner"></h2>
     <div id="qunit-testrunner-toolbar"></div>
