--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -841,7 +841,7 @@ div.table_cell_wrapper {
 /*
  * Bootstrap styles table backgrounds using nth-child(2n+1), which is
  * oblivious to hidden elements. The styles below allow us to override
- * the bootstrap style when neccessary by setting the odd/even classes.
+ * the bootstrap style when necessary by setting the odd/even classes.
  */
 .table-striped.datatable tbody {
   tr.odd td {
