Add month to date option for Resource Usage
Adds a new option to the date options combo box to show
month to date. Has about the same approximate resolution as "Last week"

Change-Id: Ia5975ba0c57abec5e5deafca1a05741e228fa8d0
Closes-Bug: #1278642

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
@@ -105,6 +105,7 @@
                 id="date_options" name="date_options" class="span2">
           <option value="1">{% trans "Last day" %}</option>
           <option value="7" selected="selected">{% trans "Last week" %}</option>
+          <option value="{% now 'j' %}">{% trans "Month to date" %}</option>
           <option value="15">{% trans "Last 15 days" %}</option>
           <option value="30">{% trans "Last 30 days" %}</option>
           <option value="365">{% trans "Last year" %}</option>
