--- a/horizon/templates/horizon/common/_usage_summary.html
+++ b/horizon/templates/horizon/common/_usage_summary.html
@@ -3,7 +3,7 @@
   <h3 class="quota-heading">{% trans "Usage Summary" %}</h3>
 </div>
 <div class="usage_info_wrapper">
-  <form action="" method="get" id="date_form" class="form-horizontal">
+  <form action="?" method="get" id="date_form" class="form-horizontal">
     <h3>{% trans "Select a period of time to query its usage" %}: </h3>
     <div class="datepicker">
       {% blocktrans with start=form.start end=form.end %}<span>From: {{ start }} </span><span>To: {{ end }} </span>{% endblocktrans %}
