Clear date picker fields every time 'Other' Period is selected
In subsequent selections of 'Other' from Period field in Admin > Resources
Usage Overview panel previously picked dates for From and To fields remain.
This patch is to clear those fields every time 'Other' is selected, as
preserving the values could be confusing.

Change-Id: If82aa26cd453a038fb8821a4c33f979dd4dbb8a9
Closes-Bug: #1280441

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
@@ -176,6 +176,7 @@
         // want to refresh, but show hide the date fields
         if ($(this).find("option:selected").val() == "other"){
           evt.stopPropagation();
+          $("#date_from .controls input, #date_to .controls input").val('');
           $("#date_from, #date_to").show();
         } else {
           $("#date_from, #date_to").hide();
