Move volume snapshots table to volumes panel
Now that instance snapshots are just images, the images & snapshots
page only has images and volume snapshots. This is an odd combination.
I think we should now move volume snapshots to the volumes panel,
since a volume snapshot is tied to a volume.

Closes-Bug: #1190843
Change-Id: I3e12cec8b859a30db9f131e9889a92277e064086

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -100,7 +100,7 @@
     {% with default_key_name="<em>"|add:_("None")|add:"</em>" %}
     <dd>{{ instance.key_name|default:default_key_name }}</dd>
     {% endwith %}
-    {% url 'horizon:project:images_and_snapshots:images:detail' instance.image.id as image_url %}
+    {% url 'horizon:project:images:images:detail' instance.image.id as image_url %}
     <dt>{% trans "Image Name" %}</dt>
     <dd><a href="{{ image_url }}">{{ instance.image_name }}</a></dd>
     {% with default_item_value="<em>"|add:_("N/A")|add:"</em>" %}
