--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% with table.needs_form_wrapper as needs_form_wrapper %}
 <div class="table_wrapper">
-  {% if needs_form_wrapper %}<form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}{% endif %}
+  {% if needs_form_wrapper %}<form action="{{ table.get_full_url }}" method="POST">{% csrf_token %}{% endif %}
   {% with columns=table.get_columns rows=table.get_rows %}
 {% block table %}
   <table id="{{ table.name }}" class="table table-bordered table-striped datatable">
