CSV Download button from Daily Usage Report
Generates CSV file with the same contents as the Daily Usage Report

blueprint csv-daily-usage
Change-Id: Iedf76a7293d612d4e23dfc60e060822b89afa9be

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/report.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/report.html
@@ -8,7 +8,10 @@
 {% endblock page_header %}
 
 {% block main %}
+    <div class="table_actions">
+      <a href="{{ csv_url }}"><button class="btn btn-small btn-download" >{% trans 'Download CSV Summary' %}</button></a>
       <a href="{% url 'horizon:admin:metering:index' %}"><button class="btn btn-small">{% trans 'Back' %}</button></a>
+    </div>
 {% for table in tables %}
     {{ table.render }}
 {% endfor %}
