Tell users when there is no data available in Daily Report
Here is the text from the bug:
If there is no metering data from the period selected,
user sees panel with no tables. It would be nicer to tell user that this is because there is no data to show.

The Daily Report displays one table per project. Since there is no data, then there are no tables.
This change displays the string "No data available" in this situation. This is the same
behavior as the Stats tab in the same Resouce Utilization Panel.

Change-Id: I15a5e029ec97d77c95c2567e8ba4493623952de7
Closes-bug: #1287931

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/report.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/report.html
@@ -12,5 +12,10 @@
 {% for table in tables %}
     {{ table.render }}
 {% endfor %}
+{% if not tables %}
+    <p>
+    {% trans 'No data available' %}
+    </p>
+{% endif %}
 {% endblock %}
 
