Fixes description field extension
This patch fixes description field extension
over other fields.

Change-Id: Ied9c71478157ee28d5f0e4af603236df922bb349
Closes-Bug: #1282196

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1083,6 +1083,9 @@ form.horizontal fieldset {
 .modal-body fieldset .form-field textarea {
   height: @baseLineHeight * 2;
 }
+.modal-body-fixed-width {
+  max-width: 298px;
+}
 
 .modal-footer input {
     width: auto;
