Fix Membership list loading bug
When loading a page on its own that contains the membership workflow,
the member lists would not get populated.

Also include a Selenium unit test to avoid similar regressions in the
future.

Change-Id: I5f23da271313f3ddf4acded221864ef5ba83f0eb
Closes-Bug: #1288270

--- a/horizon/templates/horizon/common/_workflow_step_update_members.html
+++ b/horizon/templates/horizon/common/_workflow_step_update_members.html
@@ -40,7 +40,7 @@
 
 
 <script>
-  if (typeof $ !== 'undefined') {
+  if (typeof horizon.membership !== 'undefined') {
     horizon.membership.workflow_init($(".workflow"), "{{ step.slug }}", "{{ step.get_id }}");
   } else {
     addHorizonLoadEvent(function() {
