--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
@@ -32,7 +32,7 @@
   <hr class="header_rule">
   <dl>
     <dt>{% trans "Last Updated" %}</dt>
-    <dd>{{ resource.updated_time|parse_isotime|timesince }}</dd>
+    <dd>{{ resource.updated_time|parse_isotime|timesince_or_never }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ resource.resource_status|title|replace_underscores }}: {{ resource.resource_status_reason }}</dd>
   </dl>
