No need to mark strings in test_plugin translatable
Change-Id: I3f993163b60302bbaa87c049c19631e1b978886b
Closes-Bug: #1291505

--- a/openstack_dashboard/test/test_panels/plugin_panel/templates/plugin_panel/index.html
+++ b/openstack_dashboard/test/test_panels/plugin_panel/templates/plugin_panel/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Plugin-based Panel" %}{% endblock %}
+{% block title %}Plugin-based Panel{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Plugin-based Panel")%}
+  {% include "horizon/common/_page_header.html" with title="Plugin-based Panel"%}
 {% endblock page_header %}
 
 {% block main %}
