Allow translator to control the word order (update extra spec)
Change-Id: Ia7aeeef0e8cc957a9167cdfe89f12f3c327a52b8
Closes-Bug: #1291513

--- a/openstack_dashboard/dashboards/admin/flavors/templates/flavors/extras/_edit.html
+++ b/openstack_dashboard/dashboards/admin/flavors/templates/flavors/extras/_edit.html
@@ -17,7 +17,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans 'Update the "extra spec" value for' %} &quot;{{ key }}&quot;</p>
+    <p>{% blocktrans %}Update the "extra spec" value for &quot;{{ key }}&quot;{% endblocktrans %}</p>
 </div>
 {% endblock %}
 
