--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_decryptpassword.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_decryptpassword.html
@@ -18,7 +18,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "To decrypt your password you will need your key pair for this instance. Select your key pair file, or copy and paste the content of your private key file into the text area below, then click Decrypt Password."%}</p>
+    <p>{% trans "To decrypt your password you will need the private key of your key pair for this instance. Select the private key file, or copy and paste the content of your private key file into the text area below, then click Decrypt Password."%}</p>
     <p><b>{% trans "Note: " %} </b> {% trans "The private key will be only used in your browser and will not be sent to the server" %}</p>
 </div>
 
