Changed the label from Edit Rules to Manage Rules
In the Access & Security' category under Project tab,
for each security group, there is an option to edit
the rules. Clicking this button, lists all the rules
for a given security group and from there we can
add/delete rules. Since there is no support for security
group rule editing provided by Nova/Neutron, in this fix
the label of the 'Edit Rules' button was changed to
'Manage Rules' instead.

Closes-Bug: 1210513

Change-Id: I644c95b2f0147f5f59b543fd1eb9748ee4eb7e19

--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Edit Security Group Rules" %}{% endblock %}
+{% block title %}{% trans "Manage Security Group Rules" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Edit Security Group Rules: ")|add:security_group.name %}
+  {% include "horizon/common/_page_header.html" with title=_("Manage Security Group Rules: ")|add:security_group.name %}
 {% endblock page_header %}
 
 {% block main %}
