Create links in LBaaS detail pages
LBaaS detail pages contains many UUIDs and it is not human-friendly.
This commit replaces UUIDs with name or similar strings and
add links to details of corresponding resource.

In addition, some columns are added to health monitor tables
because UUID and monitor type are not enough to identify
health monitors.

Change-Id: I7b13c827d96b57a82e3855743e7d68e564edebd7
Closes-Bug: #1243123
Closes-Bug: #1243126

--- a/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/_member_details.html
+++ b/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/_member_details.html
@@ -9,8 +9,9 @@
     <dt>{% trans "Project ID" %}</dt>
     <dd>{{ member.tenant_id }}</dd>
 
-    <dt>{% trans "Pool ID" %}</dt>
-    <dd>{{ member.pool_id }}</dd>
+    <dt>{% trans "Pool" %}</dt>
+    {% url 'horizon:project:loadbalancers:pooldetails' member.pool_id as pool_url %}
+    <dd><a href="{{pool_url}}">{{ member.pool.name_or_id }}</a></dd>
 
     <dt>{% trans "Address" %}</dt>
     <dd>{{ member.address }}</dd>
