--- a/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/_monitor_details.html
+++ b/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/_monitor_details.html
@@ -34,5 +34,15 @@
 
     <dt>{% trans "Admin State Up" %}</dt>
     <dd>{{ monitor.admin_state_up|yesno|capfirst }}</dd>
+
+    <dt>{% trans "Pools" %}</dt>
+    {% if monitor.pools %}
+    {% for pool in monitor.pools %}
+    {% url 'horizon:project:loadbalancers:pooldetails' pool.id as pool_url %}
+    <dd><a href="{{pool_url}}">{{ pool.name_or_id }}</a></dd>
+    {% endfor %}
+    {% else %}
+    <dd>{% trans "None" %}</dd>
+    {% endif %}
   </dl>
 </div>
