Remove get_resource_or_fake method in VPN panel
api/vpn.py now expands related resources now.
get_resource_or_fake method is no longer required.

Closes-Bug: #1292998
Change-Id: I45d049f7ccc3a4be7a6bfb08cbd8de650d4344de

--- a/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
+++ b/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
@@ -22,11 +22,11 @@
 
     <dt>{% trans "Subnet ID" %}</dt>
     {% url 'horizon:project:networks:subnets:detail' vpnservice.subnet_id as subnet_url %}
-    <dd><a href="{{ subnet_url}}">{{ vpnservice.subnet.name_or_id }}</a></dd>
+    <dd><a href="{{ subnet_url}}">{{ vpnservice.subnet.name_or_id}} {{vpnservice.subnet.cidr}}</a></dd>
 
     <dt>{% trans "VPN Connections" %}</dt>
     <dd>
-      {% for conn in vpnservice.vpnconnections %}
+      {% for conn in vpnservice.ipsecsiteconns %}
       {% url 'horizon:project:vpn:ipsecsiteconnectiondetails' conn.id as conn_url %}
       <a href="{{ conn_url }}">{{ conn.name_or_id }}</a><br>
       {% endfor %}
