Added button Add Interface on Network Topology tab
On the Network Topology tab, when a router is selected a new
button was added to allow it connect with different networks.
This change was made following the most simple mechanism that
I could find, please check if it is the correct behavior.

Change-Id: Ia08c5f22e3237fc4e90767a8becfe6413d754b04
Closes-Bug: #1288779

--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_container.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_container.html
@@ -19,6 +19,7 @@
         <a href="[[url]][[console]]" class="vnc_window">» [[open_console_label]]</a>
         [[/console_id]]
       </div>
+      <a class="add-interface btn btn-primary btn-mini ajax-modal [[type]]" href="[[add_interface_url]]">[[add_interface_label]]</a>
       <div class="cell delete">
         <button class="delete-device btn btn-danger btn-mini [[type]]" data-type="[[type]]"  data-device-id="[[id]]">[[type_capital]]</button>
       </div>
