Fix wrong links to volume detail
instance detail page and stack mapping has wrong links
to volume details (They point to volume snapshot by mistake)

Change-Id: I2c067941034d6a75f5d99fc663fe07515705afe7
Closes-Bug: #1296356

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -119,7 +119,7 @@
     {% for volume in instance.volumes %}
         <dt>{% trans "Attached To" %}</dt>
         <dd>
-            <a href="{% url 'horizon:project:volumes:detail' volume.volumeId %}">
+            <a href="{% url 'horizon:project:volumes:volumes:detail' volume.volumeId %}">
             {% if volume.name %}
                 {{ volume.name }}
             {%  else %}
