--- a/openstack_dashboard/dashboards/project/volumes/templates/volumes/index.html
+++ b/openstack_dashboard/dashboards/project/volumes/templates/volumes/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Volumes &amp; Snapshots" %}{% endblock %}
+{% block title %}{% trans "Volumes" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Volumes &amp; Snapshots")%}
+  {% include "horizon/common/_page_header.html" with title=_("Volumes")%}
 {% endblock page_header %}
 
 {% block main %}
