use ec2-user instead of ec2_user
Change-Id: Ib630fb65a5f587f0c58eb4edd817126ce1dde689
Closes-Bug: #1301149

--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/keypairs/_import.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/keypairs/_import.html
@@ -23,7 +23,7 @@
     <p>{% trans "After launching an instance, you login using the private key (the username might be different depending on the image you launched):" %}</p>
     <p><pre>ssh -i cloud.key ubuntu@&lt;instance_ip&gt;</pre></p>
     <p>{% trans "or:" %}</p>
-    <p><pre>ssh -i cloud.key ec2_user@&lt;instance_ip&gt;</pre></p>
+    <p><pre>ssh -i cloud.key ec2-user@&lt;instance_ip&gt;</pre></p>
 </div>
 {% endblock %}
 
